Minor update to test_datamodule test_notebooks
Improved organization, readibility and visualization

--- a/test_notebooks/test_datamodule.ipynb
+++ b/test_notebooks/test_datamodule.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "2db8e4fc",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "01f9365f",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
     "    # Preprocess function via registry\n",
     "    preproc_name = data_cfg.get(\"preprocess\", \"none\")\n",
     "    preprocess_fn = PREPROC_REGISTRY.get(preproc_name, lambda s: s)\n",
-    "    \n",
+    "    print(preproc_name, \"preprocess function:\", preprocess_fn)\n",
     "    dm = ProteinDataModule(\n",
     "        train_file=train_file,\n",
     "        val_file=val_file,\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "a5e20e4d",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "40877a07",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ee2a3fcb",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "6fbd838b",
    "metadata": {},
    "outputs": [
@@ -188,55 +188,14 @@
       "Valid: /Users/leerangyang/Documents/Workspace/Projects/plft/data/training_data/gb1/gb1_seq_regression_validation.csv\n",
       "Test : /Users/leerangyang/Documents/Workspace/Projects/plft/data/training_data/gb1/gb1_seq_regression_test.csv\n",
       "Loading tokenizer: Rostlab/prot_bert\n",
-      "Tokenizer uses_fast: True\n"
+      "Tokenizer uses_fast: True\n",
+      "protbert preprocess function: <function ProtBert_preprocess at 0x30e1bde40>\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45554533156e43529a641f0cf5955bcb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82d67d81cc5e4ea9be42d3b29f6eb444",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c290adede2c84a03a35dd0c116dcb8fa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f1355ee6b8b4879a4adf1dabc25077d",
+       "model_id": "722bddde06354f5c84ee8cfa48359298",
        "version_major": 2,
        "version_minor": 0
       },
@@ -248,9 +207,21 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G V D G E W T Y D D A T K T F T V T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n",
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G I D E E W T Y D D A T K T F T T T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n",
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G V F F E W T Y D D A T K T F T G T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10671ce16e3f4aeea3f8e772ea24df83",
+       "model_id": "79553bf21d274eb39c4ebd8f1cadddea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,9 +233,17 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G V E G E W T Y D D A T K T F T V T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85a30574a7a3407aa037d366e8e7c14b",
+       "model_id": "a36c2491e48446a288191cc82edb36cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -274,6 +253,24 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G A A A E W T Y D D A T K T F T A T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n",
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G E Y V E W T Y D D A T K T F T N T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n",
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G I I W E W T Y D D A T K T F T I T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n",
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G L W A E W T Y D D A T K T F T L T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n",
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G Q Q N E W T Y D D A T K T F T T T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n",
+      "Applied preprocess_fn to sequences.\n",
+      "Sample preprocessed sequence: M Q Y K L I L N G K T L K G E T T T E A V D A A T A E K V F K Q Y A N D N G W N M E W T Y D D A T K T F T S T E L E V L F Q G P L D P N S M A T Y E V L C E V A R K L G T D D R E V V L F L L N V F I P Q P T L A Q L I G A L R A L K E E G R L T F P L L A E C L F R A G R R D L L R D L L H L D P R F L E R H L A G T M S Y F S P Y Q L T V L H V D G E L C A R D I R S L I F L S K D T I G S R S T P Q T F L H W V Y C M E N L D L L G P T D V D A L M S M L R S L S R V D L Q R Q V Q T L M G L H L S G P S H S Q H Y R H T P L E H H H H H H\n"
+     ]
     }
    ],
    "source": [
@@ -290,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "b2262a9d",
    "metadata": {},
    "outputs": [
@@ -299,21 +296,21 @@
       "text/plain": [
        "DatasetDict({\n",
        "    train: Dataset({\n",
-       "        features: ['sequence', 'label', 'input_ids', 'token_type_ids', 'attention_mask', 'labels'],\n",
+       "        features: ['sequence', 'label', 'input_ids', 'token_type_ids', 'attention_mask'],\n",
        "        num_rows: 2691\n",
        "    })\n",
        "    validation: Dataset({\n",
-       "        features: ['sequence', 'label', 'input_ids', 'token_type_ids', 'attention_mask', 'labels'],\n",
+       "        features: ['sequence', 'label', 'input_ids', 'token_type_ids', 'attention_mask'],\n",
        "        num_rows: 299\n",
        "    })\n",
        "    test: Dataset({\n",
-       "        features: ['sequence', 'label', 'input_ids', 'token_type_ids', 'attention_mask', 'labels'],\n",
+       "        features: ['sequence', 'label', 'input_ids', 'token_type_ids', 'attention_mask'],\n",
        "        num_rows: 5743\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "92567a62",
    "metadata": {},
    "outputs": [
@@ -432,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "2de8b597",
    "metadata": {},
    "outputs": [
@@ -464,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "id": "a6d3f30f",
    "metadata": {},
    "outputs": [
@@ -482,82 +479,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2a81c3e464a4afabff8ea65e6510d8c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0e61f92dbd04d1d9e93ba49d2ce5219",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "412fd584cc8749079bf3c9603f6380f7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split: 0 examples [00:00, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d5cd1b2e24246418b8bbae9a6e1f3b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/821 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ee45fe504784abd80cfed005b1c8287",
+       "model_id": "c597f512826247ccb2a31acb1e36bf67",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Map:   0%|          | 0/176 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "334a8b04fc9b437c8171c3b4ce872d73",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/177 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -578,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "id": "9b7ee704",
    "metadata": {},
    "outputs": [
@@ -601,7 +528,7 @@
        "})"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "id": "63736082",
    "metadata": {},
    "outputs": [
